fix: dialog z-index

--- a/src/styles/core/layout-variables.sass
+++ b/src/styles/core/layout-variables.sass
@@ -5,3 +5,8 @@
   --cn-gap-row: 24px
   --cn-gap-column: 16px
   --cn-gap-toolbar: 8px
+
+  // Z-index
+  --cyan-z-index-base: 1000
+  --cyan-z-index-navigation: calc( 10 *  var(--cyan-z-index-base) )
+  --cyan-z-index-dialog: calc( 90 *  var(--cyan-z-index-base) ) 
